fix style on mobile

--- a/xt-client/styles/OrderInfo.module.scss
+++ b/xt-client/styles/OrderInfo.module.scss
@@ -1,5 +1,5 @@
 .Wrapper {
-  height: 69vh;
+  min-height: 69vh;
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
